fix: aligning radio buttons on left

--- a/src/css/_04-content.scss
+++ b/src/css/_04-content.scss
@@ -335,6 +335,4 @@ form.give-form legend {
     margin: 1em 0;
 }
 
-.frm_form_field input {
-    width: 100%;
 }
